--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
   }
   body{
     /* background: linear-gradient(to left,#fbc2eb,#a6c1ee); */
-    background-color: green;
+    background-color: #BAD7E9;
   }
   hr{
     height: 0.4rem;
