--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@
   }
   
   body {
-    background-color: darkgreen;
+    background-color: black;
     padding-bottom: 6.5rem;
     position: relative;
   }
